fix: force 50/50 split on promise cards for perfect scale alignment

--- a/style.css
+++ b/style.css
@@ -686,6 +686,7 @@ body {
 
 .c-promise__card-content {
     flex: 1;
+    width: 50%;
     padding: 60px;
     display: flex;
     flex-direction: column;
@@ -727,6 +728,7 @@ body {
 
 .c-promise__card-image-wrapper {
     flex: 1;
+    width: 50%;
     height: 460px;
     overflow: hidden;
 }
